Add style to characters list

--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
     <title>Marvel App</title>
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <h1>Marvel App</h1>
+    
+    <ul id="characters">
+        <li>Iron Man</li>
+        <li>Spider-Man</li>
+        <li>Thor</li>
+        <li>Captain America</li>
+        <li>Black Widow</li>
+    </ul>
+    
 </body>
 </html>
