--- a/src/index.html
+++ b/src/index.html
@@ -2,19 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
     <title>Marvel App</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Marvel App</h1>
     
     <ul id="characters">
-        <li>Iron Man</li>
-        <li>Spider-Man</li>
-        <li>Thor</li>
-        <li>Captain America</li>
-        <li>Black Widow</li>
+        <li><a href="https://en.wikipedia.org/wiki/Iron_Man" target="_blank">Iron Man</a></li>
+        <li><a href="https://en.wikipedia.org/wiki/Spider-Man" target="_blank">Spider-Man</a></li>
+        <li><a href="https://en.wikipedia.org/wiki/Thor_(Marvel_Comics)" target="_blank">Thor</a></li>
+        <li><a href="https://en.wikipedia.org/wiki/Captain_America" target="_blank">Captain America</a></li>
+        <li><a href="https://en.wikipedia.org/wiki/Black_Widow_(Natasha_Romanova)" target="_blank">Black Widow</a></li>
     </ul>
-    
+
 </body>
 </html>
