Ajout des persos

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Marvel App</h1>
+    <div id="banner">
+        <h1>Marvel App</h1>
+    </div>
     
     <ul id="characters">
         <li><a href="https://en.wikipedia.org/wiki/Iron_Man" target="_blank">Iron Man</a></li>
@@ -15,6 +17,6 @@
         <li><a href="https://en.wikipedia.org/wiki/Captain_America" target="_blank">Captain America</a></li>
         <li><a href="https://en.wikipedia.org/wiki/Black_Widow_(Natasha_Romanova)" target="_blank">Black Widow</a></li>
     </ul>
-
+    
 </body>
 </html>
