Add script to get characters data

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,6 @@
         <li><a href="https://en.wikipedia.org/wiki/Captain_America" target="_blank">Captain America</a></li>
         <li><a href="https://en.wikipedia.org/wiki/Black_Widow_(Natasha_Romanova)" target="_blank">Black Widow</a></li>
     </ul>
-    
+    <script src="../src/script.js"></script>
 </body>
 </html>
